--- a/rust_os/Cargo.toml
+++ b/rust_os/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rustsbi = "0.3.2"
 
 [[bin]]
 name = "kernel_elf"
